--- a/cmd/archivement-manager/Dockerfile
+++ b/cmd/archivement-manager/Dockerfile
@@ -2,9 +2,9 @@ FROM uhub.service.ucloud.cn/entropypool/alpine:3.16
 
 WORKDIR /app
 
-COPY commission-manager /app
+COPY archivement-manager /app
 
-ENTRYPOINT ["/app/commission-manager"]
+ENTRYPOINT ["/app/archivement-manager"]
 
 EXPOSE 50340 50341 50342 50343
 
